Updating workspace api demo

--- a/demoroot/notebooks/06 Workspace Management.ipynb
+++ b/demoroot/notebooks/06 Workspace Management.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "bfc4d810-e4c0-42a4-9af7-d1290e510671",
    "metadata": {},
    "outputs": [],
@@ -29,14 +29,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "714ed0c2-f078-4cf4-ad87-5db2c126c846",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# base_domain = \"demo.eoepca.org\"\n",
-    "base_domain = \"develop.eoepca.org\"\n",
-    "workspaces_endpoint = f'https://workspace-api.{base_domain}/workspaces'"
+    "base_domain = \"demo.eoepca.org\"\n",
+    "# base_domain = \"develop.eoepca.org\"\n",
+    "workspaces_endpoint = f'https://workspace-api-open.{base_domain}/workspaces'"
    ]
   },
   {
@@ -57,21 +57,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "69c48898-6fe7-4376-a224-c95658c9ff63",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'my-new-user-1647520959'"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "preferred_workspace_name = f\"my-new-user-{datetime.datetime.now().timestamp():.0f}\"\n",
     "preferred_workspace_name"
@@ -79,21 +68,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "1aecf9b0-f7ba-4f0e-ab8d-0641b9cb14bb",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'name': 'develop-user-my-new-user-1647520959'}"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "response = requests.post(\n",
     "    workspaces_endpoint,\n",
@@ -116,34 +94,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "fa8fbce2-3a6e-497d-af36-ebeff5096430",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'status': 'provisioning',\n",
-       " 'endpoints': [],\n",
-       " 'storage': None,\n",
-       " 'container_registry': None}"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "response = requests.get(f\"{workspaces_endpoint}/{actual_workspace_name}\")\n",
     "response.raise_for_status()\n",
-    "\n",
     "response.json()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "e7b202a4-f312-46b1-b69d-ce018a75323a",
    "metadata": {},
    "outputs": [],
@@ -163,30 +126,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "52b5ed61-5ac2-441b-8371-e299ff7e5a67",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'status': 'ready',\n",
-       " 'endpoints': [],\n",
-       " 'storage': {'credentials': {'access': 'develop-user-my-new-user-1647520959+c81f6e30-2',\n",
-       "   'bucketname': 'develop-user-my-new-user-1647520959',\n",
-       "   'projectid': 'd346903185d941958475387791512554',\n",
-       "   'secret': 'hidden_for_demo',\n",
-       "   'endpoint': 'https://cf2.cloudferro.com:8080',\n",
-       "   'region': 'RegionOne'}},\n",
-       " 'container_registry': {'username': 'develop-user-my-new-user-1647520959',\n",
-       "  'password': 'hidden_for_demo'}}"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "response = requests.get(f\"{workspaces_endpoint}/{actual_workspace_name}\")\n",
     "response.raise_for_status()\n",
@@ -209,21 +152,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "bb4d03cc-9383-4964-8572-945b8c942ab2",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Response [204]>"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "response = requests.post(\n",
     "    f\"{workspaces_endpoint}/{actual_workspace_name}/redeploy\",\n",
@@ -243,21 +175,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "0fb6aebd-1f5b-4540-b085-29801080cbf3",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Response [204]>"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "response = requests.delete(\n",
     "    f\"{workspaces_endpoint}/{actual_workspace_name}\",\n",
@@ -265,6 +186,14 @@
     "response.raise_for_status()\n",
     "response"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4b4ea68a-2985-408a-9534-ca4d78273893",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
