Use demo cluster for STAC

--- a/demoroot/notebooks/04 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/04 Resource Catalogue.ipynb
@@ -1502,7 +1502,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_domain = \"develop.eoepca.org\"\n",
+    "# base_domain = \"demo.eoepca.org\"\n",
     "system_catalogue_endpoint = f'https://resource-catalogue.{base_domain}'"
    ]
   },
