Fix CQL example

--- a/demoroot/notebooks/04 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/04 Resource Catalogue.ipynb
@@ -1454,7 +1454,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "my_catalogue_cql_json_query = w.collection_items('metadata:main', limit=1, cql={'eq': [{ 'property': 'title' }, 'S2B_MSIL1C_20190910T095029_N0208_R079_T33TXN_20190910T120910.SAFE']})"
+    "my_catalogue_cql_json_query = w.collection_items('metadata:main', limit=1, cql={'op': '=', 'args': [{ 'property': 'title' }, 'S2B_MSIL1C_20190910T095029_N0208_R079_T33TXN_20190910T120910.SAFE']})"
    ]
   },
   {
