Added demo for CSW federated search against Mundi DIAS CSW catalogue

--- a/demoroot/notebooks/04 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/04 Resource Catalogue.ipynb
@@ -543,6 +543,92 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0a2b6c8b-655a-495c-897f-4f876d6d400d",
+   "metadata": {},
+   "source": [
+    "### System Catalogue Discovery through Federated Search"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "42fc55d9-3fe0-4c18-980c-539bd87b206c",
+   "metadata": {},
+   "source": [
+    "This is an example of Federated Search using Mundi DIAS CSW"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3afa2550-2ab0-4f73-ba39-088b884dcee1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "csw_url = 'https://resource-catalogue.mundi.eoepca.org/csw'\n",
+    "# pycsw instance configured with \n",
+    "# federatedcatalogues=https://sentinel2.browse.catalog.mundiwebservices.com/csw"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a04d76c-09c0-45bc-bef2-7cae245fc7b7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xml = b'''<?xml version=\"1.0\" encoding=\"ISO-8859-1\" standalone=\"no\"?>\n",
+    "<csw:GetRecords xmlns:csw=\"http://www.opengis.net/cat/csw/2.0.2\" xmlns:ogc=\"http://www.opengis.net/ogc\" service=\"CSW\" version=\"2.0.2\" resultType=\"results\" startPosition=\"1\" maxRecords=\"5\" outputFormat=\"application/xml\" outputSchema=\"http://www.opengis.net/cat/csw/2.0.2\" xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\" xsi:schemaLocation=\"http://www.opengis.net/cat/csw/2.0.2 http://schemas.opengis.net/csw/2.0.2/CSW-discovery.xsd\">\n",
+    "\t<csw:DistributedSearch hopCount=\"2\"/>\n",
+    "\t<csw:Query typeNames=\"csw:Record\">\n",
+    "\t\t<csw:ElementSetName>brief</csw:ElementSetName>\n",
+    "\t</csw:Query>\n",
+    "</csw:GetRecords>\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f5e6c326-5d9b-401a-996d-590e57c2ce7b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "csw = CatalogueServiceWeb(csw_url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fcd7574c-be35-4cd4-9832-dc4a02ce3158",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "csw.getrecords(xml=xml)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "07107b28-14aa-42fe-ba38-56985225cd50",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(csw.results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6738a5cc-0870-4de0-b1df-967368a84c59",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for record in csw.records:\n",
+    "    print(csw.records[record].title)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f3828753-519d-4153-b8ed-61b95d569cc0",
    "metadata": {},
    "source": [
