Add demo section to notebook

--- a/demoroot/notebooks/04 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/04 Resource Catalogue.ipynb
@@ -1766,6 +1766,126 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d3c30037-7daa-4903-bb54-d0cbfbad283f",
+   "metadata": {},
+   "source": [
+    "### OGC API Processes client demo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bece853d-972c-4ef3-9202-86abd4d7f1fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from owslib.ogcapi.processes import Processes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0ae5df60-1ecc-4a62-a836-5e35dd0fbcd7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SERVICE_URL = 'http://172.19.0.2/ogc-api'\n",
+    "#SERVICE_URL = 'https://demo.pygeoapi.io/stable'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be715d2a-4a7b-4db8-8a5f-533cec72d2a9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p = Processes(SERVICE_URL)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1a21e09c-6c3c-4342-bb7f-d5fd376fa24d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p.response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12d9d067-cee3-49d3-860e-98a97d3517a0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p.response.get('title')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7426bb0a-f1db-4517-8a43-c4a16b380467",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p.response.get('description')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33bd7afd-3fba-4e5c-853a-7d72017fd916",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p.links"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb81c5d2-6d77-42b1-8f0b-d6369a9c6d89",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p.processes()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "011a3fd4-7d25-4f9b-8afc-f69a3fc6ca37",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hello_world = p.process('HelloPy')\n",
+    "#hello_world = p.process('hello-world')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6d802476-0665-4f2a-8ae3-1344b2f0629b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hello_world['id']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3c1e9d41-4ba7-4dd8-980b-9a798af27d92",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hello_world['title']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8024d488-6a53-4821-b491-7c33f2a1612c",
    "metadata": {},
    "source": [
