Demo anytext and bbox filter working together

--- a/demoroot/notebooks/04 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/04 Resource Catalogue.ipynb
@@ -358,11 +358,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "96c2bb02-21f4-49e3-b4f9-27718a53124e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filter_list = [\n",
+    "    And(\n",
+    "        [\n",
+    "            bbox_query,  # bounding box\n",
+    "            anytext_query # any text\n",
+    "        ]\n",
+    "    )\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "84e7a1b6-c88f-4846-a81e-bfa8840acad5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "csw.getrecords2(constraints=[anytext_query])\n",
+    "csw.getrecords2(constraints=filter_list)\n",
     "csw.results"
    ]
   },
