Updated UM demo config

--- a/demoroot/notebooks/01 User Management.ipynb
+++ b/demoroot/notebooks/01 User Management.ipynb
@@ -45,7 +45,8 @@
     "base_domain = \"demo.eoepca.org\"\n",
     "platform_domain = \"test.\" + base_domain\n",
     "base_url = \"https://\" + platform_domain\n",
-    "ades_res= \"http://ades-pepapi.\" + base_domain\n",
+    "eric_pep= \"http://demo-user-eric-pepapi.\" + base_domain\n",
+    "eric_pep_auth= \"http://demo-user-eric-pep.\"+ base_domain + \"/authorize\"\n",
     "pdp_url= \"http://\"+platform_domain+\"/pdp\"\n",
     "authorize_url = 'https://'+platform_domain+'/oxauth/restv1/authorize'\n",
     "token_url = 'https://'+platform_domain+'/oxauth/restv1/token'\n",
@@ -217,14 +218,14 @@
     "uri= \"/demo/testResource\"\n",
     "data = '{\"icon_uri\":\"'+uri+'\",\"name\":\"DemoResource\",\"scopes\":[\"protected_access\"]}'\n",
     "headers = {'Content-Type': 'application/json, Authorization: Bearer '+ operator_id_token}\n",
-    "response = requests.post(ades_res+'/resources', headers=headers, data=data, verify=False)\n",
+    "response = requests.post(eric_pep+'/resources', headers=headers, data=data, verify=False)\n",
     "print(\"Resource Insertion with code: \" + str(response))\n",
     "\n",
     "#--------------------------\n",
     "#RESOURCE PUBLIC VISUALIZATION-->Query the resource endpoint to check if the resource is inserted\n",
     "#--------------------------\n",
     "operation_headers = { 'content-type': \"application/x-www-form-urlencoded\", \"cache-control\": \"no-cache\", \"Authorization\": \"Bearer \"+operator_id_token}\n",
-    "res = requests.get(ades_res +\"/resources\"+\"?path=\"+uri, headers=headers, verify=False)\n",
+    "res = requests.get(eric_pep +\"/resources\"+\"?path=\"+uri, headers=headers, verify=False)\n",
     "k=res.json()\n",
     "print(\"Resource found in database: \" + str(k))"
    ]
@@ -249,9 +250,9 @@
     "#GET TICKET-->Naive request to resource with no authorization, ticket returned\n",
     "#--------------------------\n",
     "rpt=None\n",
-    "ades_res_proc_url = \"http://ades-pep.\" + base_domain + \"/authorize\" ; print(\"ADES API Processes endpoint:\", ades_res_proc_url)\n",
+    "print(\"ADES API Processes endpoint:\", eric_pep_auth)\n",
     "ticket_headers_oper = { 'content-type': \"application/json\", \"cache-control\": \"no-cache\", \"Authorization\": \"Bearer \" + operator_id_token, \"X-Original-Uri\": uri }\n",
-    "tkt = requests.get(ades_res_proc_url, headers=ticket_headers_oper, verify=False)\n",
+    "tkt = requests.get(eric_pep_auth, headers=ticket_headers_oper, verify=False)\n",
     "ticket = tkt.headers[\"WWW-Authenticate\"].split(\"ticket=\")[1]\n",
     "print(\"401 Unauthorized, ticket returned: \"+ticket)\n",
     "\n",
@@ -262,13 +263,13 @@
     "rpt_headers= { 'Content-Type': 'application/x-www-form-urlencoded', 'cache-control': 'no-cache' }\n",
     "rpts_response = requests.post(token_url, data=data, headers=rpt_headers, verify = False)\n",
     "rpt = rpts_response.json()[\"access_token\"]\n",
-    "print(\"The UMA returns: \" + str(rpts_response) + \" with a RPT UMA Token\" + str(rpt))\n",
+    "print(\"The UMA returns: \" + str(rpts_response) + \" with a RPT UMA Token: \" + str(rpt))\n",
     "\n",
     "#--------------------------\n",
     "#ACCESS TO RESOURCE-->The access_token is returned and the request to the resource is retried with approved credentials\n",
     "#--------------------------\n",
     "headers = { 'content-type': \"application/json\", \"cache-control\": \"no-cache\", \"Authorization\": \"Bearer \"+rpt, \"X-Original-Uri\": uri}\n",
-    "resource_access = requests.get(ades_res_proc_url, headers=headers, verify=False)\n",
+    "resource_access = requests.get(eric_pep_auth, headers=headers, verify=False)\n",
     "print(\"Retrying access to resource with proper token: \"+ str(resource_access))"
    ]
   },
@@ -301,7 +302,7 @@
     "#GET TICKET--> 401\n",
     "#--------------------------\n",
     "ticket_headers_alice = { 'content-type': \"application/json\", \"cache-control\": \"no-cache\", \"Authorization\": \"Bearer \"+alice_id_token, \"X-Original-Uri\": uri}\n",
-    "tkt = requests.get(ades_res_proc_url, headers=ticket_headers_alice, verify=False)\n",
+    "tkt = requests.get(eric_pep_auth, headers=ticket_headers_alice, verify=False)\n",
     "ticket = tkt.headers[\"WWW-Authenticate\"].split(\"ticket=\")[1]\n",
     "print(\"401 Unauthorized, ticket returned: \" + str(ticket))\n",
     "#--------------------------\n",
@@ -355,7 +356,7 @@
     "#--------------------------\n",
     "#GET TICKET--> 401\n",
     "#--------------------------\n",
-    "tkt = requests.get(ades_res_proc_url, headers=ticket_headers_alice, verify=False)\n",
+    "tkt = requests.get(eric_pep_auth, headers=ticket_headers_alice, verify=False)\n",
     "ticket = tkt.headers[\"WWW-Authenticate\"].split(\"ticket=\")[1]\n",
     "print(\"401 Unauthorized, ticket returned: \"+ticket)\n",
     "#--------------------------\n",
@@ -369,7 +370,7 @@
     "#ACCESS TO RESOURCE--> 200\n",
     "#--------------------------\n",
     "headers = { 'content-type': \"application/json\", \"cache-control\": \"no-cache\", \"Authorization\": \"Bearer \"+rpt, \"X-Original-Uri\": uri}\n",
-    "tkt = requests.get(ades_res_proc_url, headers=headers, verify=False)\n",
+    "tkt = requests.get(eric_pep_auth, headers=headers, verify=False)\n",
     "print(\"Retrying access to resource with proper token: \"+ str(tkt))"
    ]
   }
