Switch resource catalogue demo to user Bob

--- a/demoroot/notebooks/04 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/04 Resource Catalogue.ipynb
@@ -839,7 +839,7 @@
    "id": "92a9ed4e-8ae8-4697-881b-b88c86d54ebc",
    "metadata": {},
    "source": [
-    "In this part of the demo, Eric will use the workspace resource catalogue endpoint to discover processing output.  The workspace catalogue is local to the user, which also has federated access to the system catalogue."
+    "In this part of the demo, Bob will use the workspace resource catalogue endpoint to discover processing output.  The workspace catalogue is local to the user, which also has federated access to the system catalogue."
    ]
   },
   {
@@ -850,11 +850,11 @@
    "outputs": [],
    "source": [
     "#-------------------------------------------------------------------------------\n",
-    "# Authenticate as user 'eric' and get ID Token\n",
+    "# Authenticate as user 'bob' and get ID Token\n",
     "#-------------------------------------------------------------------------------\n",
-    "USER_ERIC=\"eric\"\n",
-    "USER_ERIC_PASSWORD=\"defaultPWD\"\n",
-    "eric_id_token = demo.get_id_token(USER_ERIC, USER_ERIC_PASSWORD)"
+    "USER_BOB=\"bob\"\n",
+    "USER_BOB_PASSWORD=\"defaultPWD\"\n",
+    "bob_id_token = demo.get_id_token(USER_BOB, USER_BOB_PASSWORD)"
    ]
   },
   {
@@ -873,7 +873,7 @@
    "outputs": [],
    "source": [
     "headers = {\n",
-    "    'Authorization': 'Bearer ' + eric_id_token\n",
+    "    'Authorization': 'Bearer ' + bob_id_token\n",
     "}"
    ]
   },
@@ -882,7 +882,7 @@
    "id": "5203de97-ddde-4b2b-880d-036bd8aa35da",
    "metadata": {},
    "source": [
-    "Eric uses his workspace catalogue to list all records identifier, type and title"
+    "Bob uses his workspace catalogue to list all records identifier, type and title"
    ]
   },
   {
@@ -892,8 +892,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "workspace_endpoint = f'https://resource-catalogue.{workspace_prefix}-{USER_ERIC}.{base_domain}/csw'\n",
-    "print(f\"Eric's workspace (catalogue): {workspace_endpoint}\")\n",
+    "workspace_endpoint = f'https://resource-catalogue.{workspace_prefix}-{USER_BOB}.{base_domain}/csw'\n",
+    "print(f\"Bob's workspace (catalogue): {workspace_endpoint}\")\n",
     "csw = CatalogueServiceWeb(workspace_endpoint, timeout=30,headers=headers)\n",
     "csw.getrecords2(maxrecords=10)\n",
     "csw.results"
@@ -909,16 +909,6 @@
     "for rec in csw.records:\n",
     "    print(f'identifier: {csw.records[rec].identifier}\\ntype: {csw.records[rec].type}\\ntitle: {csw.records[rec].title}\\n')\n",
     "csw.records[rec].references"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "495da60a-e729-4411-9d4b-dee658eb66a6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "csw.records['S2B_36RTT_20191205_0_L2A'].references"
    ]
   },
   {
