Adding demo to register ADES/collections in user workspace

--- a/demoroot/notebooks/06 Workspace Management.ipynb
+++ b/demoroot/notebooks/06 Workspace Management.ipynb
@@ -41,6 +41,48 @@
   },
   {
    "cell_type": "markdown",
+   "id": "73e7a1ed-09bb-40a4-8fae-d777d7f60c8b",
+   "metadata": {},
+   "source": [
+    "We want to associate the workspace with a user. Also, some operations on the workspace require a logged in user. So we are using the client and use Eric as an owner."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f8949fe0-b1f6-433f-bf64-61be535b6d48",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import utils.DemoClient as client\n",
+    "import jwt\n",
+    "\n",
+    "demo = client.DemoClient(f\"https://test.{base_domain}\")\n",
+    "demo.register_client()\n",
+    "demo.save_state()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13d59c13-7b68-4d0f-a54a-59ac27be3956",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "USER_ERIC=\"eric\"\n",
+    "USER_ERIC_PASSWORD=\"defaultPWD\"\n",
+    "eric_id_token = demo.get_id_token(USER_ERIC, USER_ERIC_PASSWORD)\n",
+    "headers = {\n",
+    "    'Authorization': 'Bearer ' + eric_id_token\n",
+    "}\n",
+    "\n",
+    "jwt_header = jwt.get_unverified_header(eric_id_token)\n",
+    "jwt_payload = jwt.decode(eric_id_token, options={\"verify_signature\": False})\n",
+    "eric_uid = jwt_payload[\"sub\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a23a0f74-e8d4-4996-bf7c-dc4f373a0263",
    "metadata": {},
    "source": [
@@ -77,6 +119,7 @@
     "    workspaces_endpoint,\n",
     "    json={\n",
     "        \"preferred_name\": preferred_workspace_name,\n",
+    "        \"default_owner\": eric_uid,\n",
     "    }\n",
     ")\n",
     "response.raise_for_status()\n",
@@ -142,6 +185,101 @@
   },
   {
    "cell_type": "markdown",
+   "id": "02484c7f-6447-4d80-bc7f-bc528639b101",
+   "metadata": {},
+   "source": [
+    "## Registration\n",
+    "\n",
+    "We will now register an ADES instance in the workspace API"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d801b145-4e81-48da-9cf5-6078299d2e4f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = requests.post(\n",
+    "    f\"{workspaces_endpoint}/{actual_workspace_name}/register\",\n",
+    "    json={\n",
+    "        \"type\": \"ades\",\n",
+    "        \"url\": \"https://demo.pygeoapi.io/stable/processes\",\n",
+    "    }\n",
+    ")\n",
+    "response.raise_for_status()\n",
+    "response"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "916ac61a-0c90-4602-82df-b52aec2ac4fd",
+   "metadata": {},
+   "source": [
+    "Check if the ADES is actually registered:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d1b8047-05d1-417e-80d0-98e330e589cb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time.sleep(3)\n",
+    "response = requests.get(f\"https://resource-catalogue.{actual_workspace_name}.{base_domain}/collections/metadata:main/items?type=application\", headers=dict(f=\"json\", **headers))\n",
+    "response.raise_for_status()\n",
+    "response.json()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "134e4289-92a1-40d8-843e-dc4d92eb6fba",
+   "metadata": {},
+   "source": [
+    "Now we create a new collection:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "02ccf6b2-2053-4caf-bd06-279b2300bdef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "collection = requests.get(\"https://raw.githubusercontent.com/radiantearth/stac-spec/master/examples/collection.json\").json()\n",
+    "\n",
+    "response = requests.post(\n",
+    "    f\"{workspaces_endpoint}/{actual_workspace_name}/register-collection\",\n",
+    "    json=collection, # TODO\n",
+    ")\n",
+    "response.raise_for_status()\n",
+    "response"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "da7ce17a-669b-4a82-a536-9e115d9b95fe",
+   "metadata": {},
+   "source": [
+    "To see if it was registered:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14244c32-14fe-4d58-9e6f-0cb8a190144b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time.sleep(3)\n",
+    "response = requests.get(f\"http://resource-catalogue.{actual_workspace_name}.{base_domain}/collections/metadata:main/items?title=simple-collection\", headers=headers)\n",
+    "response.raise_for_status()\n",
+    "response.json()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "bfdef034-e0e4-4638-b63d-707e24b13845",
    "metadata": {},
    "source": [
@@ -186,19 +324,11 @@
     "response.raise_for_status()\n",
     "response"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4b4ea68a-2985-408a-9534-ca4d78273893",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.4 ('.venv': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -212,7 +342,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.10.4"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "a54a461fdcf44e5a224468008512edaff839d4994d71e5cd7b7eea3a4ad8d088"
+   }
   }
  },
  "nbformat": 4,
