Adding registration of application package in Workspace demo notebook

--- a/demoroot/notebooks/06 Workspace Management.ipynb
+++ b/demoroot/notebooks/06 Workspace Management.ipynb
@@ -58,6 +58,7 @@
     "import jwt\n",
     "\n",
     "demo = client.DemoClient(f\"https://test.{base_domain}\")\n",
+    "#demo = client.DemoClient(f\"https://auth.{base_domain}\")\n",
     "demo.register_client()\n",
     "demo.save_state()"
    ]
@@ -178,6 +179,9 @@
     "response.raise_for_status()\n",
     "\n",
     "workspace_data = response.json()\n",
+    "bucket_name = workspace_data[\"storage\"][\"credentials\"][\"bucketname\"]\n",
+    "s3_access = workspace_data[\"storage\"][\"credentials\"][\"access\"]\n",
+    "s3_secret = workspace_data[\"storage\"][\"credentials\"][\"secret\"]\n",
     "workspace_data[\"storage\"][\"credentials\"]['secret'] = \"hidden_for_demo\"\n",
     "workspace_data[\"container_registry\"][\"password\"] = \"hidden_for_demo\"\n",
     "workspace_data"
@@ -280,6 +284,82 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a356b1e9-6a84-4eaa-81f5-a7af650b58ac",
+   "metadata": {},
+   "source": [
+    "We will now upload an application package to the workspace:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "df5aa630-5ff0-477c-b3b2-35511ef1bead",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import boto3\n",
+    "S3_ENDPOINT = \"https://cf2.cloudferro.com:8080\"\n",
+    "session = boto3.session.Session()\n",
+    "s3resource = session.resource('s3', aws_access_key_id=s3_access, aws_secret_access_key=s3_secret, endpoint_url=S3_ENDPOINT)\n",
+    "object = s3resource.Object(bucket_name, 'application-package/s-expression/s-expression-0_0_2.cwl')\n",
+    "result = object.put(Body=open('../data/s-expression-cwl.cwl', 'rb'))\n",
+    "res = result.get('ResponseMetadata')\n",
+    "if res.get('HTTPStatusCode') == 200:\n",
+    "    print('Application package uploaded successfully')\n",
+    "else:\n",
+    "    print('Application package not uploaded')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "34f16ec1-d9f3-42b5-ba0e-13bc8b389e29",
+   "metadata": {},
+   "source": [
+    "Now we register the application package:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "38b7de37-d895-4fd1-beea-9e6536d703a6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "resource_url= f'{bucket_name}/application-package/s-expression/s-expression-0_0_2.cwl'\n",
+    "response = requests.post(\n",
+    "    f\"{workspaces_endpoint}/{actual_workspace_name}/register\",\n",
+    "    json={\n",
+    "        \"type\": \"application\",\n",
+    "        \"url\": resource_url,\n",
+    "    }\n",
+    ")\n",
+    "response.raise_for_status()\n",
+    "response"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "734b57b0-c968-4a1d-8c64-0e0fbbeb0ece",
+   "metadata": {},
+   "source": [
+    "Now we check the registration result:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a370fa42-9c1b-4392-aab7-72b7e4844066",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time.sleep(3)\n",
+    "response = requests.get(f\"https://resource-catalogue.{actual_workspace_name}.{base_domain}/collections/metadata:main/items?type=application\", headers=dict(f=\"json\", **headers))\n",
+    "response.raise_for_status()\n",
+    "response.json()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "bfdef034-e0e4-4638-b63d-707e24b13845",
    "metadata": {},
    "source": [
@@ -328,7 +408,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.4 ('.venv': venv)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -342,7 +422,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.2"
   },
   "vscode": {
    "interpreter": {
