Fix catalogue request for collection item

--- a/demoroot/notebooks/06 Workspace Management.ipynb
+++ b/demoroot/notebooks/06 Workspace Management.ipynb
@@ -277,7 +277,7 @@
    "outputs": [],
    "source": [
     "time.sleep(3)\n",
-    "response = requests.get(f\"http://resource-catalogue.{actual_workspace_name}.{base_domain}/collections/metadata:main/items?title=simple-collection\", headers=headers)\n",
+    "response = requests.get(f\"http://resource-catalogue.{actual_workspace_name}.{base_domain}/collections/metadata:main/items/simple-collection\", headers=headers)\n",
     "response.raise_for_status()\n",
     "response.json()"
    ]
