Adding OpenSearch examples for bbox and time search

--- a/demoroot/notebooks/04 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/04 Resource Catalogue.ipynb
@@ -1197,6 +1197,48 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9b832fbb-75b6-42b7-ba68-cf5499378815",
+   "metadata": {},
+   "source": [
+    "The user can search using a bbox parameter:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "73a4365b-ff5b-4d95-a51e-d6787ee0666d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = system_catalogue_endpoint + '?mode=opensearch&service=CSW&version=3.0.0&request=GetRecords&elementsetname=full&resulttype=results&typenames=csw:Record&bbox=13.9,37,15.1,37.9'\n",
+    "R = S.get(url=url)\n",
+    "bs = BeautifulSoup(R.text, 'xml')\n",
+    "print(bs.prettify())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4850e7a0-c2a8-4bea-9a59-b034b9e9cd2f",
+   "metadata": {},
+   "source": [
+    "The user can search using a time parameter:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1a3daecd-b82b-4db5-aaa7-acf9fe57cf0d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = system_catalogue_endpoint + '?mode=opensearch&service=CSW&version=3.0.0&request=GetRecords&elementsetname=full&resulttype=results&typenames=csw:Record&time=2021-04-02/2021-04-03'\n",
+    "R = S.get(url=url)\n",
+    "bs = BeautifulSoup(R.text, 'xml')\n",
+    "print(bs.prettify())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d80bb3df-88f9-469b-8e39-5dd8e90892b2",
    "metadata": {},
    "source": [
