Added OpenSearch start,end example

--- a/demoroot/notebooks/04 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/04 Resource Catalogue.ipynb
@@ -1239,6 +1239,27 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5467eeca-ce77-4c2f-90fb-d99899774dcc",
+   "metadata": {},
+   "source": [
+    "Or separate time start/stop parameters:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4afdcf0c-ac3e-4676-877a-4330dfaf9cda",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = system_catalogue_endpoint + '?mode=opensearch&service=CSW&version=3.0.0&request=GetRecords&elementsetname=full&resulttype=results&typenames=csw:Record&start=2021-04-02&stop=2021-04-03'\n",
+    "R = S.get(url=url)\n",
+    "bs = BeautifulSoup(R.text, 'xml')\n",
+    "print(bs.prettify())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d80bb3df-88f9-469b-8e39-5dd8e90892b2",
    "metadata": {},
    "source": [
