--- a/demoroot/notebooks/06 Workspace Management.ipynb
+++ b/demoroot/notebooks/06 Workspace Management.ipynb
@@ -231,7 +231,7 @@
    "outputs": [],
    "source": [
     "time.sleep(3)\n",
-    "response = requests.get(f\"https://resource-catalogue.{actual_workspace_name}.{base_domain}/collections/metadata:main/items?type=application\", headers=dict(f=\"json\", **headers))\n",
+    "response = requests.get(f\"https://resource-catalogue.{actual_workspace_name}.{base_domain}/collections/metadata:main/items?type=service\", headers=dict(f=\"json\", **headers))\n",
     "response.raise_for_status()\n",
     "response.json()"
    ]
