--- a/demoroot/notebooks/02 Processing.ipynb
+++ b/demoroot/notebooks/02 Processing.ipynb
@@ -214,8 +214,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "resource_url= f'{bucket_name}/application-package/s-expression/s-expression-0_0_2.cwl'\n",
-    "demo.workspace_register(workspace_url, workspace_name,resource_url, id_token=user_id_token, access_token=workspace_access_token)"
+    "application_url= f'{bucket_name}/application-package/s-expression/s-expression-0_0_2.cwl'\n",
+    "demo.workspace_register_application(workspace_url, workspace_name, application_url, id_token=user_id_token, access_token=workspace_access_token)"
    ]
   },
   {
@@ -328,7 +328,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "application_package_url=f\"s3://{resource_url}\"\n",
+    "application_package_url=f\"s3://{application_url}\"\n",
     "os.system(f'../data/create-deploy-body-cwl.sh \"{application_package_url}\"')\n",
     "!cat ../data/app-deploy-body-cwl.json"
    ]
