Fix hostname of login-service for demo cluster

--- a/demoroot/notebooks/01 User Management.ipynb
+++ b/demoroot/notebooks/01 User Management.ipynb
@@ -43,7 +43,7 @@
     "# Initialise client\n",
     "#-------------------------------------------------------------------------------\n",
     "base_domain = \"demo.eoepca.org\"\n",
-    "platform_domain = \"test.\" + base_domain\n",
+    "platform_domain = \"auth.\" + base_domain\n",
     "base_url = \"https://\" + platform_domain\n",
     "eric_pep= \"http://demo-user-eric-pepapi.\" + base_domain\n",
     "eric_pep_auth= \"http://demo-user-eric-pep.\"+ base_domain + \"/authorize\"\n",
@@ -391,7 +391,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
