--- a/demoroot/notebooks/02 Processing.ipynb
+++ b/demoroot/notebooks/02 Processing.ipynb
@@ -53,7 +53,7 @@
     "# Initialise client\n",
     "#-------------------------------------------------------------------------------\n",
     "base_domain = \"demo.eoepca.org\"\n",
-    "platform_domain = \"test.\" + base_domain\n",
+    "platform_domain = \"auth.\" + base_domain\n",
     "base_url = \"https://\" + platform_domain\n",
     "demo = client.DemoClient(base_url)\n",
     "demo.register_client()\n",
