--- a/demoroot/notebooks/03 Demo.ipynb
+++ b/demoroot/notebooks/03 Demo.ipynb
@@ -62,7 +62,7 @@
     "#workspace_prefix = \"rm-user\"\n",
     "base_domain = \"demo.eoepca.org\"\n",
     "workspace_prefix = \"demo-user\"\n",
-    "demo = client.DemoClient(f\"https://test.{base_domain}\")\n",
+    "demo = client.DemoClient(f\"https://auth.{base_domain}\")\n",
     "demo.register_client()\n",
     "demo.save_state()"
    ]
@@ -538,7 +538,7 @@
    "outputs": [],
    "source": [
     "# ADES URLs\n",
-    "ades_base_url = f\"http://ades.test.{base_domain}\"\n",
+    "ades_base_url = f\"http://ades.{base_domain}\"\n",
     "ades_wps_url = f\"{ades_base_url}/{USER_ERIC}/zoo\"\n",
     "print(\"ADES WPS endpoint:\", ades_wps_url)\n",
     "\n",
@@ -1145,7 +1145,7 @@
    "outputs": [],
    "source": [
     "ades_resources_endpoint = f\"http://ades.resources.{base_domain}\"\n",
-    "pdp_url = f\"http://test.{base_domain}/pdp\"\n",
+    "pdp_url = f\"http://auth.{base_domain}/pdp\"\n",
     "print(f\"ADES PEP Resources: {ades_resources_endpoint}\\nPolicy Decision Point: {pdp_url}\")"
    ]
   },
