--- a/demoroot/notebooks/04 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/04 Resource Catalogue.ipynb
@@ -679,7 +679,7 @@
    "outputs": [],
    "source": [
     "import utils.DemoClient as client\n",
-    "demo = client.DemoClient(f\"https://test.{base_domain}\")\n",
+    "demo = client.DemoClient(f\"https://auth.{base_domain}\")\n",
     "demo.register_client()\n",
     "demo.save_state()"
    ]
