--- a/demoroot/notebooks/06 Workspace Management.ipynb
+++ b/demoroot/notebooks/06 Workspace Management.ipynb
@@ -57,7 +57,7 @@
     "import utils.DemoClient as client\n",
     "import jwt\n",
     "\n",
-    "demo = client.DemoClient(f\"https://test.{base_domain}\")\n",
+    "demo = client.DemoClient(f\"https://auth.{base_domain}\")\n",
     "#demo = client.DemoClient(f\"https://auth.{base_domain}\")\n",
     "demo.register_client()\n",
     "demo.save_state()"
