Switch to user Eric for the catalogue demo

--- a/demoroot/notebooks/04 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/04 Resource Catalogue.ipynb
@@ -839,7 +839,7 @@
    "id": "92a9ed4e-8ae8-4697-881b-b88c86d54ebc",
    "metadata": {},
    "source": [
-    "In this part of the demo, Bob will use the workspace resource catalogue endpoint to discover processing output.  The workspace catalogue is local to the user, which also has federated access to the system catalogue."
+    "In this part of the demo, Eric will use the workspace resource catalogue endpoint to discover processing output.  The workspace catalogue is local to the user, which also has federated access to the system catalogue."
    ]
   },
   {
@@ -852,9 +852,9 @@
     "#-------------------------------------------------------------------------------\n",
     "# Authenticate as user 'bob' and get ID Token\n",
     "#-------------------------------------------------------------------------------\n",
-    "USER_BOB=\"bob\"\n",
-    "USER_BOB_PASSWORD=\"defaultPWD\"\n",
-    "bob_id_token = demo.get_id_token(USER_BOB, USER_BOB_PASSWORD)"
+    "USER_ERIC=\"eric\"\n",
+    "USER_ERIC_PASSWORD=\"defaultPWD\"\n",
+    "eric_id_token = demo.get_id_token(USER_ERIC, USER_ERIC_PASSWORD)"
    ]
   },
   {
@@ -873,7 +873,7 @@
    "outputs": [],
    "source": [
     "headers = {\n",
-    "    'Authorization': 'Bearer ' + bob_id_token\n",
+    "    'Authorization': 'Bearer ' + eric_id_token\n",
     "}"
    ]
   },
@@ -882,7 +882,7 @@
    "id": "5203de97-ddde-4b2b-880d-036bd8aa35da",
    "metadata": {},
    "source": [
-    "Bob uses his workspace catalogue to list all records identifier, type and title"
+    "Eric uses his workspace catalogue to list all records identifier, type and title"
    ]
   },
   {
@@ -892,7 +892,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "workspace_endpoint = f'https://resource-catalogue.{workspace_prefix}-{USER_BOB}.{base_domain}/csw'\n",
+    "workspace_endpoint = f'https://resource-catalogue.{workspace_prefix}-{USER_ERIC}.{base_domain}/csw'\n",
     "print(f\"Bob's workspace (catalogue): {workspace_endpoint}\")\n",
     "csw = CatalogueServiceWeb(workspace_endpoint, timeout=30,headers=headers)\n",
     "csw.getrecords2(maxrecords=10)\n",
